# tree-sitter-cyber

./: .gitattributes  .gitignore  .project.nvim  Cargo.toml  README.md  binding.gyp  build.zig  grammar.js  justfile  nohup.out  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  tree-sitter-cyber.wasm  tsconfig.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  locals.scm  tags.scm
rules/: utils.js
sample_scripts/: capture_test.lua  if_tests.cy  if_tests.cy   larger_test.cy  object_test.cy  render_data.cy  render_data2.cy  string_test.cy  test_script.cy
sample_scripts/libs/: cbindgen.cy  ray.cy
sample_scripts/tests/: if_test.cy  import_test.cy  map_test.cy  match_test.cy  object_test.cy  static_func_test.cy
scripts/: build_steps.ps1  color.ps1
src/: grammar.json  node-types.json  parser.c  scanner.cc  scanner.zig  scanner2.zig
src/tree_sitter/: parser.h  tree_sitter_cyber_ffi.h
test/corpus-skip/: if_statement.txt
zig-cache/o/821a37d5ceac82c08e389763a29e38ef/: builtin.zig
zig-cache/o/946a3630ca8e7865b00cbefe2d23b76b/: builtin.zig
zig-cache/o/97553316f36eba9824c05dff96ca5542/: builtin.zig
